--- a/5.3/Dockerfile
+++ b/5.3/Dockerfile
@@ -18,7 +18,7 @@ RUN set -ex \
   \
   && cd /usr/src/lua \
   \
-  && make linux test \
+  && make linux test MYCFLAGS="-x c++" CC="g++" \
   && make linux install \
   \
   && cd / \
